# rag-against-the-machine

./: .envrc  .flake8  .gitignore  CODE_EXPLAINED.md  LEARN.md  Makefile  PREREQUIS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: meta.json
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/student/: __init__.py  __main__.py  chunking.py  cli.py  evaluate.py  generator.py  index.py  ingest.py  models.py  tokenizer.py
