[project]
name = "student"
version = "0.1.0"
description = "RAG against the machine - 42 project"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pydantic>=2.6",
    "fire>=0.6",
    "tqdm>=4.66",
    "bm25s>=0.2.0",
    "transformers>=4.44",
    "torch>=2.2",
    "accelerate>=0.30",
    "numpy>=1.26",
    "sentence-transformers>=2.7",
    "chromadb>=0.5",
    "PyStemmer>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.0",
    "mypy>=1.10",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/student"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
